[tool.poetry]
name = "devbotapi"
version = "0.1.0"
description = "api for devbot"
authors = ["Oscar Vickers <oscarvickersdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
pydantic = "^2.9.1"
uvicorn = "^0.30.6"
asyncio = "^3.4.3"
pywebpush = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
